# paypack

./: .TASK_RECORD.md  .WECHAT_MEMENTO.md  .gitignore  ANNOUNCE.md  DISCUSSION_POST.md  GITHUB_MIRROR_PLAN.md  GRANT_PROPOSAL.md  ISSUE_TEMPLATE_CONTENT.md  LICENSE  PROGINN_PUBLISH.md  PROJECT_SUMMARY.md  PR_AWESOME_LANGCHAIN.md  QUICKSTART.md  README.en.md  README.md  README_CN.md  README_CN_github.md  STRATEGY.md  V2EX_POST.md  ZHIHU_ARTICLE.md  _check_readme.md  _github_check.md  _pre_check.yaml  _test_plugin_install.py  check_template.py  cleanup_labels.py  find_categories.py  find_section.py  generate_alipay_keys.py  generate_icon.py  langchain_tool.py  nginx.conf  pay.html  paypac.py  paypack-0.1.0.difypkg  paypack.py  paypack_langchain-0.2.0-py3-none-any.whl  paypack_wechat_run.example.py  post_discussion.py  post_issue.py  (+13 more)
_pkg/: langchain_paypack-0.5.0-py3-none-any.whl
_pkg2/: langchain_core-0.2.43-py3-none-any.whl
_pkg3/: langchain_core-0.3.0-py3-none-any.whl
_test_venv/: pyvenv.cfg
dify_plugin/: .env.example  PRIVACY.md  README.md  main.py  manifest.yaml  openapi.json  pyproject.toml  requirements.txt
dify_plugin/provider/: paypack.py  paypack.yaml
dify_plugin/tools/: paypack_pay.py  paypack_pay.yaml  paypack_query.py  paypack_query.yaml  paypack_refund.py  paypack_refund.yaml
examples/: agent_pays_api.ipynb
submit/paypack/: README.md  manifest.yaml  pyproject.toml
submit/paypack/provider/: paypack.py  paypack.yaml
submit/paypack/tools/: paypack_pay.py  paypack_pay.yaml  paypack_query.py  paypack_refund.py  paypack_refund.yaml
(+18 files in other folders)
