[project]
name = "paypack"
version = "0.1.0"
description = "x402 (Coinbase) + AP2 (Google) settlement client for Dify Agents. Settles metered API calls via USDC/ETH (Base/Ethereum/Polygon/Arbitrum) or CNY acquirers (Alipay/WeChat)."
requires-python = ">=3.12"
dependencies = [
    "langchain-paypack>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
