[project]
name = "paypack"
version = "0.1.0"
description = "AI Agent universal payment middleware — USDC/ETH + Alipay/WeChatPay CNY"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dify_plugin>=0.9.0",
    "web3>=7.0",
    "pycryptodome>=3.20.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = []
